--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
 PORT = 8000
-DATABASE = mongodb+srv://ozkan:highgamers01@jobsearchapi.aj2jvm1.mongodb.net/?retryWrites=true&w=majority
+DATABASE = mongodb+srv://yourURIHERE@jobsearchapi.aj2jvm1.mongodb.net/?retryWrites=true&w=majority
 JWT_SECRET = thisisrandomkeyforjwttoken 
